--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   width: auto;
-  height: 200px;
+  height: auto;
 }
 
 #header {
@@ -18,6 +18,24 @@
   background-color: #666699;
   margin-bottom: 5px;
 }
+
+#nav {
+  width: 200px;
+  height: auto;
+  background-color: #CCFFFF;
+  float: left;
+  margin-bottom: 5px;
+}
+
+#content {	
+  left: 200px;
+  width: auto;
+  height: auto;
+  background-color: #FFFF99;
+  overflow: auto;
+  margin-left: 5px;
+}
+
 #footer {
   width: auto;
   height: 50px;
@@ -25,17 +43,24 @@
   clear: both;
 }
 
-#nav {
-  width: 200px;
-  background-color: #CCFFFF;
-  float: left;
-  margin-bottom: 5px;
+label {
+    font-size: 12pt;
+    /* font-weight: bold; */
+}
+/* funktioniert nicht */
+label.search_label {
+	color: yellow;
+    font-size: 12pt;
+    font-weight: bold;
 }
 
-#content {
-  width: auto;
-  height: auto;
-  background-color: #FFFF99;
-  float: left;
-  margin-left: 5px;
+.search_textbox {
+	left: 20px;
+	width: 140px;
+	border: 1px solid #3366FF;
+	border-left: 4px solid #3366FF;
+	background-color : #99FFCC;
+}
+
+.search_listbox {
 }
